# gtranslate

./: Cargo.toml  Cross.toml  README.md
.github/workflows/: main.yml
src/: helper.rs  main.rs  response.rs
