[package]
name = "gtranslate"
version = "1.0.1"
authors = ["sabitmaulana <sabitmaulanaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # link-time optimization
codegen-units = 1 # reduce parallel codegen
panic = 'abort'   # abort on panic
strip = true

[dependencies]
anyhow = "1.0.82"
rsdns = { version = "0.17.0", features = ["net-std"] }
serde = "1.0.200"
serde_derive = "1.0.200"
ureq = { version = "2.9.7", features = ["json"] }
xflags = "0.3.2"
